| Bug #57896 | Incorrect check of schema version in LQH | ||
|---|---|---|---|
| Submitted: | 1 Nov 2010 14:19 | Modified: | 5 Nov 2010 22:31 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[1 Nov 2010 14:19]
Jonas Oreland
[1 Nov 2010 15:45]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/122448 3331 jonas oreland 2010-11-01 ndb - bug#57896 - LQHKEYREQ only contains 16-bit schema version
[1 Nov 2010 16:16]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.39 (revid:jonas@mysql.com-20101101154450-c1sbv0n5lyfig041) (version source revid:jonas@mysql.com-20101101154450-c1sbv0n5lyfig041) (merge vers: 5.1.51-ndb-6.3.39) (pib:21)
[1 Nov 2010 16:16]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.20 (revid:jonas@mysql.com-20101101161110-luebipotbx2zhel5) (version source revid:jonas@mysql.com-20101101161110-luebipotbx2zhel5) (merge vers: 5.1.51-ndb-7.0.20) (pib:21)
[1 Nov 2010 16:50]
Jonas Oreland
bug#57897 could also cause this Pushed to 6.3.39, 7.0.20 and 7.1.9
[5 Nov 2010 21:34]
Jon Stephens
Documented fix in the NDB-6.3.39, 7.0.20, and 7.1.9 changelogs as follows:
The LQHKEYREQ request message used by the local query handler
when checking the major schema version of a table, being only 16
bits wide, could cause this check to fail with an Invalid schema
version error (error code 1227). This issue was made to occur in
tests by creating, dropping, and re-creating the same table
65537 times, then trying to insert into the table.
Closed.
