ndb - bug#57896 - LQHKEYREQ only contains 16-bit schema version